<resources>
    <string name="app_name">NoobSpace</string>
    <string name="name">nombre de usuario</string>
    <string name="passwod">contraseña</string>
    <string name="buuton">login</string>
    <string name="don_have_account">no tienes una cuenta?</string>
    <string name="create_here">  creala aqui</string>
    <string name="email">correo</string>
    <string name="user">nombre</string>
    <string name="lastname">apellido</string>
    <string name="corfirmpass">confirme contraseña</string>
    <string name="buuton2">unete</string>
    <string name="bartoo">create cuenta</string>
    <string name="title_activity_referenc">referenc</string>
    <string name="user_card">theyisus</string>
    <string name="firt_word">give power</string>
    <string name="time">4 dias</string>
    <string name="like">10 Me gusta</string>
    <string name="mensaje">Escribir mensaje...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lore"> En el pasado distante, una raza de muy avanzada tecnología,
        conocida como los Forerunner, luchó contra una especie parásita llamada Flood. Esta, que se propaga mediante la infestación de otras formas de vida,
        rebasó las capacidades de los Forerunners e infestó casi toda la galaxia.
        Una de las especies afectada fue la humana, quienes se vieron forzados a aventurarse al espacio y entrar en el conflicto.
        Los Forerunners, exhaustos de su guerra y tras haber analizado todas las posibles opciones, decidieron recurrir a su última opción: un arma definitiva en contra de los Flood.
        Utilizando una instalación conocida como "el Arca", construyeron gigantescas estructuras en forma de anillo,
        los Halos. La matriz de Halos, una vez activa, destruiría toda la vida inteligente de la galaxia, forzando a los Flood a morir de hambre.
        Intentando resistir hasta el último momento, los Forerunner activaron los anillos y desaparecieron.9​

Decenas de miles de años después, en el Siglo XXVI, la humanidad, bajo el control gubernamental del Mando Espacial de las Naciones Unidas,
        o UNSC (United Nations Space Command), colonizó muchos planetas gracias al desarrollo de los viajes interestelares a velocidades superiores a la de la luz.
        Los conflictos estallan entre las "colonias internas" y las más jóvenes y remotas "colonias externas" hasta escalar a una guerra civil.
        La UNSC desarrolla un programa para crear súper-soldados de élite (conocidos como Spartans) para poner fin a la rebelión de manera silenciosa.10​ En el año 2525,
        la colonia humana de Harvest es atacada por una alianza teocrática de varias razas alien que se hacen llamar el "Covenant" (cuyo significado literal en español es: el pacto, la alianza).
        Los líderes del Covenant declaran a la humanidad como herejes y una ofensa para sus dioses (los Forerunners) y comienzan una guerra santa para exterminar a toda la raza humana.
        La tecnología Covenant, junto con su superioridad numérica, prueban ser armas letales y decisivas. El único factor que juega al favor de la humanidad son los súpersoldados Spartan,
        aunque hay muy pocos como para lograr cambiar el rumbo de la batalla.

En 2552, el Covenant llega a Reach, la última fortaleza de la UNSC además de la Tierra, y lanza una invasión masiva al planeta.
        Los últimos Spartans y las fuerzas armadas de la UNSC son insuficientes para evitar el bombardeo de la superficie con plasma,
        destruyendo efectivamente todo a su paso. Siguiendo órdenes para evitar exponer la localización de la Tierra, la inteligencia artificial (IA) Cortana,
        a bordo de la nave "Pillar of Autumn" (Pilar de otoño) escoge un conjunto de coordenadas al azar que resulta con el descubrimiento de una instalación Halo.
        El Covenant los persigue, logrando dañar a la nave y dirigiendo la batalla hacia la superficie del anillo. El Covenant accidentalmente libera al Flood que se encontraba preso;
        para evitar cualquier riesgo, el guardián del anillo, 343 Guilty Spark (Chispa culpable), recurre al spartan John-117 (Master Chief o Jefe maestro en español;
        se le conoce así debido al rango que tiene, "Jefe Maestro"), quien es el último spartan que queda. Sin embargo, antes de que el par logre activar las defensas del anillo,
        Cortana revela que la activación del anillo conllevaría su propia destrucción. El Jefe Maestro y Cortana deciden detonar los motores del Pillar of Autumn,
        destruyendo el Halo en el proceso y previniendo así el escape de los Flood.</string>
    <string name="tramsiton">trancition</string>
    <string name="title_activity_preuba_wey">PreubaWey</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba_de_manifest">PruebaDeManifest</string>
    <string name="title_activity_dashboard">ActivityDashboard</string>
    <string name="enviar_solicitud">Enviar Solicitud</string>
    <string name="aceptar_invitacion">Aceptar invitación</string>
</resources>
