<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardimagen"
    cardview:cardCornerRadius="5dp"
    android:layout_margin="10dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/imagen1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/tramsiton"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="15sp"
            android:paddingBottom="15sp"
            android:background="@color/textColor">
            <TextView
                android:id="@+id/titleCardPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_card"
                android:textColor="@color/texto"
                android:textSize="30sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/messageCardPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firt_word"
                    android:textSize="15sp"
                    android:textColor="@color/texto"/>
                <TextView
                    android:id="@+id/timecard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="15dp"
                    android:layout_marginLeft="15sp"
                    android:textColor="@color/texto"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <ImageButton
                    android:id="@+id/likeCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_favorite_border_white_24dp"
                     />
                <TextView
                    android:id="@+id/likeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"
                    android:textSize="15dp"
                    android:layout_marginLeft="15sp"
                    android:textColor="@color/texto"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>